--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="src/assets/crown.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wdth@80&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wdth@80&display=swap');
     </style>
     <title>Crown clothing</title>
   </head>
