--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wdth@80&display=swap');
     </style>
-    <title>Crown clothing</title>
+    <title>Crown Clothing</title>
   </head>
 
   <body>
